force-app/main/default/objects/Order_Note__c/Order_Note__c.object-meta.xml
<CustomObject>
    <label>Order Note</label>
    <nameField>
        <label>Order Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>