force-app/main/default/objects/Order_Note__c/fields/ClientAdvisor__c.field-meta.xml
<CustomField>
    <fullName>ClientAdvisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Notes_del</relationshipName>
    <type>Lookup</type>
</CustomField>