force-app/main/default/objects/Order_Note__c/fields/Order_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Shipping</label>
    <referenceTo>OrderShipping__c</referenceTo>
    <relationshipLabel>Order Notes</relationshipLabel>
    <relationshipName>Order_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>