force-app/main/default/objects/Order_Note__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ExceptionalClient</fullName>
                <label>Exceptional Client (VIC 50K)</label>
            </value>
            <value>
                <fullName>ExceptionalSituations</fullName>
                <label>Exceptional Situations (Complaints - Defective items received)</label>
            </value>
            <value>
                <fullName>ExceptionalSKU</fullName>
                <label>Exceptional SKU’s (&gt;4.500€*)</label>
            </value>
            <value>
                <fullName>NoneOfAbove</fullName>
                <label>None of the above</label>
            </value>
            <value>
                <fullName>ClientAccomodation</fullName>
                <label>Client accommodation</label>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>SecondLookOrderReplacement</fullName>
                <label>Second look order replacement</label>
            </value>
            <value>
                <fullName>LoyaltyGesture</fullName>
                <label>Loyalty Gesture</label>
            </value>
            <value>
                <fullName>ClientRequest</fullName>
                <label>Client Request</label>
            </value>
            <value>
                <fullName>InitialsNumbersMistake</fullName>
                <label>There is a mistake with the initials/numbers of my personalization</label>
            </value>
            <value>
                <fullName>ColorsMistake</fullName>
                <label>There is a mistake with the colors of my personalization</label>
            </value>
            <value>
                <fullName>StickersMistake</fullName>
                <label>There is a mistake with the stickers of my personalization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>