force-app/main/default/objects/Order_Note__c/fields/Tech_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>Tech_OrderNumber__c</fullName>
    <description>This field is used to store the order number if we receive the &quot;Order Note&quot; before the creation of the Order. We use it to populate the lookup &quot;order__c&quot; when the order is created.</description>
    <label>Tech Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>