force-app/main/default/objects/Order_Note__c/fields/Tech_ShippingNumber__c.field-meta.xml
<CustomField>
    <fullName>Tech_ShippingNumber__c</fullName>
    <label>Tech Shipping Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>