force-app/main/default/objects/Order_Note__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATTACHED_NOTE</fullName>
                <label>Attached Note</label>
            </value>
            <value>
                <fullName>CLIENTELING_EXCEPTION</fullName>
                <label>Clienteling Exception</label>
            </value>
            <value>
                <fullName>PRICE_ADJUSTMENT</fullName>
                <label>Price Adjustment</label>
            </value>
            <value>
                <fullName>BANK_TRANSFER</fullName>
                <label>Bank Transfer</label>
            </value>
            <value>
                <fullName>STOCK_ON_HOLD</fullName>
                <label>Stock On Hold</label>
            </value>
            <value>
                <fullName>FREE_SHIPPING</fullName>
                <label>Free Shipping</label>
            </value>
            <value>
                <fullName>PAYMENT_LINK</fullName>
                <label>Payment Link</label>
            </value>
            <value>
                <fullName>EXTENDED_PAYMENT_LINK</fullName>
                <label>Extended Payment Link</label>
            </value>
            <value>
                <fullName>PERSO_PRODUCT_ACC</fullName>
                <label>Perso Product Accepted</label>
            </value>
            <value>
                <fullName>PERSO_PRODUCT_REF</fullName>
                <label>Perso Product Refused</label>
            </value>
            <value>
                <fullName>PAY_AFTER_AGREEMENT</fullName>
                <label>Pay After Agreement</label>
            </value>
            <value>
                <fullName>General Comment</fullName>
                <isActive>false</isActive>
                <label>General Comment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>