force-app/main/default/objects/Order_Note__c/validationRules/Order_Or_OrderShipping.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Or_OrderShipping</fullName>
    <active>true</active>
    <description>Order__c and OrderShipping__c can&apos;t be setted both</description>
    <errorConditionFormula>AND( ISNULL(Order__c) ,  ISNULL(Order_Shipping__c) )</errorConditionFormula>
    <errorMessage>You must fill in either &quot;Order__c&quot; or &quot;Order_Shipping__c&quot; but not both.</errorMessage>
</ValidationRule>